--- a/RealEstateProject/index.css
+++ b/RealEstateProject/index.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    
+}
+
 header{
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
     height: 10vh;
@@ -5,6 +11,19 @@ header{
     justify-content: center;
     align-items: center;
     
+}
+
+main{
+    overflow-x: hidden;;
+}
+
+main::-webkit-scrollbar{
+    display: none;
+}
+
+body{
+    width: auto;
+    height: auto;
 }
 
 nav ul li{
@@ -48,7 +67,14 @@ img{
     color: orange;
 }
 
-
+.sec-2{
+    width: 90vw;
+    height: 80vh;
+    display: flex;
+    margin: auto;
+    padding: 2rem;
+    /* background-color: black; */
+}
 
 .crd-tit-one{
     font-size: 2rem;
@@ -156,64 +182,52 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
     text-transform: uppercase;
 }
 
-.sec-2{
-    width: 90vw;
-    height: 80vh;
-    display: flex;
-    margin: auto;
-    padding: 2rem;
-    /* background-color: black; */
-}
 
 .sec-3{
+    /* box-sizing: border-box; */
+    width: 100vw;
+    height: 100vh;
+    
+}
+
+.sec-one-main{
     box-sizing: border-box;
-    width: 100%;
-    height: auto;
+    min-width: 100%;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    margin: auto;
-    /* background: -webkit-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -o-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -ms-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -moz-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%); */
-
+    position: relative;
+    top: -4rem;
+    
 
 }
 .sec-4{
     width: 100%;
-    height: 80vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;;
-    /* background-color: gainsboro; */
-    /* background: -webkit-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -o-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -ms-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: -moz-linear-gradient(left, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%);
-    background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 78%, rgb(199, 151, 72) 100%); */
-
-
+    height: 100vh;
+   
 }
 
-.sec-5{
+.sec-two-main{
+    box-sizing: border-box;
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    padding-bottom: 5rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .container1{
-    margin-top: 1rem;
-    width: 90%;
+    position: relative;
+    top: -3rem;
+    width: 100%;
     
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+
 }
 .container2{
     position: relative;
@@ -221,7 +235,7 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
     width: 90%;
     
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -230,21 +244,30 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
     text-transform: uppercase;
     font-weight: 600;
     text-align: center;
-    margin-top: -2rem;
+    /* margin-top: -2rem; */
     font-size: 2.3rem;
     color: rgb(231, 181, 0);
+    position: relative;
+    top: -5rem;
 
     /* color: white; */
 
 }
 
 .exex{
+    
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center;
+    /* margin-top: -2rem; */
+    font-size: 2.5vw;
+    color: rgb(231, 181, 0);
     position: relative;
-    top: 7rem;
+    top: 6rem
 }
 
 .txt{
-    width: 37rem;
+    width: 40vw;
     text-align: justify;
     color: black
 }
@@ -260,9 +283,18 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
 }
 
 .waves{
+    /* height: 17rem; */
     /* margin-top: 1rem; */
+    position: relative;
+    top: 1rem;
+    /* background-color: beige; */
 }
 
-a {
-    text-decoration: none;
+.imgleft{
+    width: auto;
+    object-fit: contain;
+}
+.imgright{
+    width: auto;
+    object-fit:contain;
 }
