--- a/RealEstateProject/index.css
+++ b/RealEstateProject/index.css
@@ -287,7 +287,7 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
     /* margin-top: 1rem; */
     position: relative;
     top: 1rem;
-    /* background-color: beige; */
+    background-color: beige;
 }
 
 .imgleft{
@@ -297,4 +297,16 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
 .imgright{
     width: auto;
     object-fit:contain;
+}
+
+
+.sec-5{
+    width:100vw;
+    height: 70vh;
+    
+}
+
+footer{
+    height: 70vh;
+    width: 100vw;
 }
