--- a/RealEstateProject/index.css
+++ b/RealEstateProject/index.css
@@ -307,6 +307,7 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
 }
 
 footer{
-    height: 70vh;
-    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
 }
