--- a/RealEstateProject/index.css
+++ b/RealEstateProject/index.css
@@ -68,13 +68,22 @@ img{
 }
 
 .sec-2{
-    width: 90vw;
-    height: 80vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    margin: auto;
-    padding: 2rem;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+
+    padding: 0rem 2rem;
+    /* padding: 0px 1rem; */
     /* background-color: black; */
 }
+
+
+
+
+
 
 .crd-tit-one{
     font-size: 2rem;
@@ -291,10 +300,19 @@ background: linear-gradient(to right, rgb(225, 188, 128) 0%, rgb(200, 151, 70) 7
 }
 
 .imgleft{
-    width: auto;
-    object-fit: contain;
+    width: 40%;
+    height: 100%;
+    background-image: url('images/leftImg.jpeg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* background-color: aquamarine; */
 }
 .imgright{
-    width: auto;
-    object-fit:contain;
+    width: 40%;
+    height: 100%;
+    background-image: url('images/rightImg.jpeg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
