--- a/RealEstateProject/responsiveIndex.css
+++ b/RealEstateProject/responsiveIndex.css
@@ -1,3 +1,11 @@
-@media (max-width:900px) {
+@media  screen and (max-width:900px) {
+    .sec-2{
+        height: 160vh;
+    }
+    .price{
+        position: absolute;
+        top: 34%;
+    }
+
     
 }
